--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,20 @@
 MONGODB_URI=''
 DATABASE_NAME=''
-APP_HOST='localhost'
-APP_PORT=8017
+
+LOCAL_DEV_APP_HOST=''
+LOCAL_DEV_APP_PORT=
+
+AUTHOR=''
+
+WEBSITE_DOMAIN_DEVELOPMENT=''
+WEBSITE_DOMAIN_PRODUCTION=''
+
+BREVO_API_KEY=''
+ADMIN_EMAIL_ADDRESS=''
+ADMIN_EMAIL_NAME=''
+
+ACCESS_TOKEN_SECRET_SIGNATURE=''
+ACCESS_TOKEN_LIFE=''
+
+REFRESH_TOKEN_SECRET_SIGNATURE=''
+REFRESH_TOKEN_LIFE=''
