--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.22.10",
     "@getbrevo/brevo": "^2.2.0",
+    "agenda": "^5.0.0",
     "async-exit-hook": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.0",
