--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "DATN-API",
   "scripts": {
     "lint": "eslint src --ext js --report-unused-disable-directives --max-warnings 0",
-    "clean": "if exist build (rmdir /s /q build) && mkdir build",
+    "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src -d ./build/src",
     "build": "npm run clean && npm run build-babel",
     "production": "npm run build && cross-env BUILD_MODE=production node ./build/src/server.js",
@@ -28,6 +28,7 @@
     "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongodb": "^6.0.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
